syntax = "proto3";

package chain;

import "google/protobuf/duration.proto";

service Chain {
    // Adds a IBC enabled chain to storage
    rpc Add (AddChainRequest) returns (AddChainResponse);

    // Fetches IBC enabled chain details
    rpc Query (QueryChainRequest) returns (QueryChainResponse);

    // Returns the denom hash for a denom on IBC enabled chain after transferring token
    rpc GetDenomHash (GetDenomHashRequest) returns (GetDenomHashResponse);
}

message AddChainRequest {
    // gRPC address of IBC enabled chain
    optional string grpc_addr = 1;
    // RPC address of IBC enabled chain
    optional string rpc_addr = 2;
    // Account address prefix of IBC enabled chain
    optional string account_prefix = 3;
    // Fee configuration of chain
    FeeConfig fee_config = 4;
    // Trust level of IBC enabled chain
    optional string trust_level = 5;
    // Duration of the period since the LastestTimestamp during which the submitted headers are valid for upgrade
    google.protobuf.Duration trusting_period = 6;
    // Defines how much new (untrusted) header's time can drift into the future.
    google.protobuf.Duration max_clock_drift = 7;
    // Light client RPC timeout
    google.protobuf.Duration rpc_timeout = 8;
    // Diversifier for solo machine
    optional string diversifier = 9;
    // Port ID of IBC channel
    optional string port_id = 10;
    // Trusted height of chain for light client
    optional uint32 trusted_height = 11;
    // Trusted hash of chain for light client
    optional string trusted_hash = 12;
}

message AddChainResponse {
    // Chain ID of added chain
    string chain_id = 1;
}

message FeeConfig {
    // Fee amount to be used in each cosmos sdk transaction
    optional string fee_amount = 1;
    // Fee denom to be used in each cosmos sdk transaction
    optional string fee_denom = 2;
    // Gas limit to be used in each cosmos sdk transaction
    optional string gas_limit = 3;
}

message QueryChainRequest {
    // Chain ID
    string chain_id = 1;
}

message QueryChainResponse {
    // Chain ID
    string chain_id = 1;
    // Node ID of peer
    string node_id = 2;
    // gRPC address of IBC enabled chain
    string grpc_addr = 3;
    // RPC address of IBC enabled chain
    string rpc_addr = 4;
    // Account address prefix of IBC enabled chain
    string account_prefix = 5;
    // Fee configuration of chain
    FeeConfig fee_config = 6;
    // Trust level of IBC enabled chain
    string trust_level = 7;
    // Duration of the period since the LastestTimestamp during which the submitted headers are valid for upgrade
    google.protobuf.Duration trusting_period = 8;
    // Defines how much new (untrusted) header's time can drift into the future.
    google.protobuf.Duration max_clock_drift = 9;
    // Light client RPC timeout
    google.protobuf.Duration rpc_timeout = 10;
    // Diversifier for solo machine
    string diversifier = 11;
    // Current sequence of solo machine
    uint64 sequence = 12;
    // Current packet sequence of solo machine
    uint64 packet_sequence = 13;
    // Port ID of IBC channel
    string port_id = 14;
    // Trusted height of chain for light client
    uint64 trusted_height = 15;
    // Trusted hash of chain for light client
    string trusted_hash = 16;
    // Connection details of this chain
    ConnectionDetails connection_details = 17;
}

message ConnectionDetails {
    // Client ID of solo machine on IBC enabled chain
    string solo_machine_client_id = 1;
    // Client ID of IBC enabled chain on solo machine
    string tendermint_client_id = 2;
    // Connection ID of solo machine on IBC enabled chain
    string solo_machine_connection_id = 3;
    // Connection ID of IBC enabled chain on solo machine
    string tendermint_connection_id = 4;
    // Channel ID of solo machine on IBC enabled chain
    string solo_machine_channel_id = 5;
    // Channel ID of IBC enabled chain on solo machine
    string tendermint_channel_id = 6;
}

message GetDenomHashRequest {
    // Chain ID
    string chain_id = 1;
    // Denom of tokens on solo machine
    string denom = 2;
}

message GetDenomHashResponse {
    // Hash of denom on IBC enabled chain. `None` if connection is not yes established
    optional string denom_hash = 1;
}
